# cvconvnet

./: .gitignore  CMakeLists.txt  README.mkd
example/: README  testimg.cpp  testimg.sh  testmnist.cpp  testmnist.sh
fexample/: FaceDetectTest.h  FaceDetectTest.java  cnn.cpp  cnn.h  facedetect.cpp  ftestimg.cpp
include/: cvconvnet.h  cvconvnetparser.h  cvconvolutionplane.h  cvfastsigmoid.h  cvgenericplane.h  cvmaxoperatorplane.h  cvmaxplane.h  cvrbfplane.h  cvregressionplane.h  cvsourceplane.h  cvsubsamplingplane.h
src/: cvconvnet.cpp  cvconvnetparser.cpp  cvconvolutionplane.cpp  cvfastsigmoid.cpp  cvgenericplane.cpp  cvmaxoperatorplane.cpp  cvmaxplane.cpp  cvrbfplane.cpp  cvregressionplane.cpp  cvsourceplane.cpp  cvsubsamplingplane.cpp
test/: cvmaxoperatorplane_test.cpp
